--- a/app/src/editor/canvas/components/DraggableCanvasWindow.pcss
+++ b/app/src/editor/canvas/components/DraggableCanvasWindow.pcss
@@ -1,3 +1,7 @@
+.root {
+  position: relative;
+}
+
 .dialog {
   width: 100%;
   border-radius: 4px;
